RESOLVED FIXED 245918
Fix css/css-transforms/transform-box/fill-box-002.html WPT
https://bugs.webkit.org/show_bug.cgi?id=245918
Summary Fix css/css-transforms/transform-box/fill-box-002.html WPT
Tim Nguyen (:ntim)
Reported 2022-09-30 17:19:08 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-30 20:25:40 PDT
Tim Nguyen (:ntim)
Comment 2 2022-09-30 20:35:05 PDT
EWS
Comment 3 2022-10-01 08:46:09 PDT
Committed 255060@main (3c6b4ac4654c): <https://commits.webkit.org/255060@main> Reviewed commits have been landed. Closing PR #4896 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.