Cherry-pick 3c6b4ac4654c. rdar://problem/100647287

Recompute transforms on SVG containers if bounds have changed during layout
    https://bugs.webkit.org/show_bug.cgi?id=245918
    <rdar://100647287>

    Reviewed by Nikolas Zimmermann.

    The transform-origin depends on the size of the shape, but <g> (LegacyRenderSVGContainer) only gets the final bounds after laying out the children and updating the cached boundaries.
    Make sure we recompute the transforms again after calling updateCachedBoundaries(), but only recompute when transformReferenceBoxRect() was changed.

    Test: css/css-transforms/transform-box/fill-box-002.html

    * LayoutTests/TestExpectations:
    * Source/WebCore/rendering/svg/LegacyRenderSVGContainer.cpp:
    (WebCore::LegacyRenderSVGContainer::layout):
    * Source/WebCore/rendering/svg/LegacyRenderSVGTransformableContainer.cpp:
    (WebCore::LegacyRenderSVGTransformableContainer::calculateLocalTransform):
    * Source/WebCore/rendering/svg/LegacyRenderSVGTransformableContainer.h:

    Canonical link: https://commits.webkit.org/255060@main

Canonical link: https://commits.webkit.org/252432.610@safari-7614-branch